--- a/app/styles/about.css
+++ b/app/styles/about.css
@@ -1,11 +1,11 @@
 
 
-/* Typing effect */
+
 .webType {
     display: inline-block;
     overflow: hidden;
     white-space: nowrap;
-    border-right: 3px solid currentColor; /* Cursor effect */
+    border-right: 3px solid currentColor;
     animation: typing 4s steps(22, end) infinite, blink 0.6s step-end infinite;
   }
 
