--- a/app/styles/sideNav.css
+++ b/app/styles/sideNav.css
@@ -1,8 +1,8 @@
-
+/* 
 
 
 .text-gradient {
     background: linear-gradient(to right, #d3cdcd, #ff9c6e);
     -webkit-background-clip: text;
     color: transparent;
-  }
+  } */
