--- a/app/styles/home.css
+++ b/app/styles/home.css
@@ -47,12 +47,14 @@
 }
 
 
-.webType {
+
+
+.webIntro {
   display: inline-block;
   overflow: hidden;
   white-space: nowrap;
   border-right: 3px solid currentColor;
-  animation: typing 4s steps(12, end) infinite, blink 0.6s step-end infinite;
+  animation: typing 4s steps(22, end) infinite, blink 0.6s step-end infinite;
 }
 
 @keyframes typing {
@@ -72,6 +74,8 @@
     border-color: transparent;
   }
 }
+
+
 
 
 .IntroType {
