--- a/app/styles/home.css
+++ b/app/styles/home.css
@@ -53,7 +53,7 @@
   white-space: nowrap;
   border-right: 3px solid currentColor; 
   width: 0; 
-  animation: typing 6s steps(24, end) forwards, blink 0.6s step-end infinite;
+  animation: typing 4s steps(19, end) infinite, blink 0.6s step-end infinite;
 }
 
 
