--- a/app/styles/home.css
+++ b/app/styles/home.css
@@ -45,38 +45,24 @@
     opacity: 1;
   }
 }
-
 .devSkill {
-  
   display: inline-block;
   overflow: hidden;
   white-space: nowrap;
-  border-right: 3px solid currentColor; 
-  width: 0; 
-  animation: typing 4s steps(19, end) infinite, blink 0.6s step-end infinite;
+  border-right: 3px solid currentColor;
+  width: 0;
 }
-
 
 @keyframes typing {
-  from {
-    width: 0;
-  }
-  
-  70% {
-    width: 100%;
-  }
-  to {
-    width: 0;
-  }
+  0% { width: 0; }
+  75% { width: 100%; }
+  100% { width: 100%; }
 }
-
 
 @keyframes blink {
-  50% {
-    border-color: transparent;
-  }
+  0%, 100% { border-color: currentColor; }
+  50% { border-color: transparent; }
 }
-
 
 
 
