--- a/app/styles/home.css
+++ b/app/styles/home.css
@@ -4,6 +4,14 @@
   color: transparent;
 }
 
+
+.gradient-text {
+  background: linear-gradient(90deg, white, #cd3a4e, yellow);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+
 .devTextEl {
   -webkit-animation: focus-in-expand-fwd 0.8s
     cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
