--- a/app/styles/projects.css
+++ b/app/styles/projects.css
@@ -1,7 +1,8 @@
 .swiper {
   width: 100%;
   height: 100%;
-  z-index: 0;
+  z-index: 1;
+  position: relative;
 }
 
 .swiper-slide {
@@ -14,7 +15,7 @@
 .swiper-button-next,
 .swiper-button-prev {
   color: #60A5FA !important;
-  z-index: 0;
+  z-index: 1;
 }
 
 .swiper-pagination-bullet {
@@ -27,7 +28,22 @@
 }
 
 .swiper-pagination {
-  z-index: 0;
+  z-index: 1;
+}
+
+@media (max-width: 1024px) {
+  .swiper {
+    z-index: 1;
+  }
+  
+  .swiper-button-next,
+  .swiper-button-prev {
+    z-index: 1;
+  }
+  
+  .swiper-pagination {
+    z-index: 1;
+  }
 }
 
 
